# SymptomMonster

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
docs/: FORMATS.md  INPUTS.md  METHODS.md  PIPELINE.md
src/symptommonster/: __init__.py  cli.py  io.py  llm.py
src/symptommonster/benchmark/: __init__.py  agreement.py  equivalence.py  metrics.py  run.py
src/symptommonster/extract/: __init__.py  extractor.py  runner.py
src/symptommonster/figures/: __init__.py  benchmark_lollipop.py  pipeline_schematic.py  primitives.py  run.py  signal_grid.py  supp.py  tables.py  theme.py
src/symptommonster/masking/: __init__.py  masker.py
src/symptommonster/noise/: __init__.py  surrogate.py
src/symptommonster/normalize/: __init__.py  mapping.py  pipeline.py  text.py  tiers.py
src/symptommonster/reference/: __init__.py  parse.py  run.py
src/symptommonster/resources/: __init__.py
src/symptommonster/resources/prompts/: extraction.txt  normalize_tier3.txt
src/symptommonster/resources/rules/: synonym_rules.toml
src/symptommonster/stats/: __init__.py  core.py  run.py
src/symptommonster/subgroup/: __init__.py  core.py  run.py
tests/: test_agreement.py  test_bayesian.py  test_masking.py  test_metrics.py  test_preprocess.py  test_reference_parse.py  test_stats_core.py  test_stats_run.py  test_surrogate.py
